# holdem

./: .actrc  .pnp.cjs  AGENTS.md  LICENSE  README.md  build-and-release.ps1  package.json  pnpm-lock.yaml  tailwind.config.js  tsconfig.json  updater.json
.github/: dependabot.yml
.github/workflows/: main.yaml  tauri.yml
app/: LICENSE  README.md  build-and-release.js  build-and-release.ps1  components.json  package-lock.json  package.json  pnpm-lock.yaml  pnpm-workspace.yaml  postcss.config.js  updater.json  vite.config.ts
app/.github/workflows/: main.yaml
app/src/: App.tsx  PopupWindow.tsx  global.css  main.tsx  types.ts
app/src-tauri/: .envexample  .gitignore  AGENTS.md  Cargo.toml  plan.md  tauri.conf.json
app/src-tauri/capabilities/: default.json  macos.json
app/src-tauri/drag-patch/: .cargo_vcs_info.json  CHANGELOG.md  Cargo.toml.orig
app/src-tauri/drag-patch/src/: lib.rs
app/src-tauri/drag-patch/src/platform_impl/: mod.rs
app/src-tauri/drag-patch/src/platform_impl/gtk/: mod.rs
app/src-tauri/drag-patch/src/platform_impl/macos/: mod.rs
app/src-tauri/drag-patch/src/platform_impl/windows/: mod.rs
app/src-tauri/icons/: icon.icns
app/src-tauri/src/: analytics.rs  commands.rs  config.rs  custom_drop.rs  file.rs  file_drop.rs  lib.rs  logging.rs  mouse_monitor.rs  test.rs  thumbnail.rs  tray.rs  utils.rs
app/src-tauri/src/commands/: config_ops.rs  drag_ops.rs  file_ops.rs  mod.rs  window_ops.rs
app/src-tauri/src/mouse_monitor/: common.rs  mac.rs  mod.rs  win.rs
app/src-tauri/src/utils/: mod.rs  native_thumbnailer.rs  thumbnails.rs  win_icons.rs
app/src/components/: FileIcon.tsx  ShelfItem.tsx  StackedIcons.tsx
app/src/components/ui/: toggle-group.tsx
app/src/hooks/: useFileManagement.ts  useShakeThreshold.ts
app/src/lib/: fileUtils.ts  utils.ts  windowUtils.ts
app/src/pages/: Consent.tsx  Settings.tsx  Updater.tsx
holdem_website/: package-lock.json  package.json  pnpm-lock.yaml  vercel.json
holdem_website/app/: data.ts  footer.tsx  header.tsx  layout.tsx  page.tsx
holdem_website/app/components/: holdem-demo.tsx
holdem_website/app/components/ui/: button.tsx  compact-connect-form.tsx  input.tsx  label.tsx  textarea.tsx
holdem_website/app/hooks/: use-toast.ts
holdem_website/app/lib/: discord-webhook.ts
holdem_website/app/update.json/: route.ts
holdem_website/lib/: constants.ts
holdem_website/public/: update.json
src/: App.tsx  PopupWindow.tsx  global.css  main.tsx  types.ts
src-tauri/: Cargo.toml  build.rs  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/src/: commands.rs  config.rs  file.rs  file_handler.rs  lib.rs  main.rs  mose_monitor.rs  mouse_monitor.rs  tray.rs
src-tauri/src/macutils/: mouse_monitor.rs
src-tauri/src/windowsutils/: mouse_monitor.rs
src/components/: FileIcon.tsx  StackedIcons.tsx  Updater.tsx
src/components/ui/: dialog.tsx  toggle-group.tsx
src/hooks/: useFileManagement.ts
src/lib/: fileUtils.ts  utils.ts
src/pages/: Settings.tsx
src/workers/: fileIconWorker.ts
