[package]
name = "holdem"
version = "0.1.5"
description = "A Tauri App"
authors = ["Zubin"]
edition = "2021"


[lib]
name = "holdem_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2.0.0-rc", features = [] }

[dependencies]
tauri = { version = "2.0.0-rc", features = ["tray-icon"] }
tauri-plugin-shell = "2.0.0-rc"
tauri-plugin-updater = "2.0.0-rc"
tauri-plugin-dialog = "2.0.0-rc"
tauri-plugin-autostart = "2.0.0-rc"
tauri-plugin-global-shortcut = "2.0.0-rc"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
drag = { git = "https://github.com/AudiogenAI/drag.git", version = "0.9.0" }
tauri-plugin-fs = "2.0.0-rc"
windows = { version = "0.52.0", features = [
    "Win32_Foundation",
    "Win32_UI_Input_KeyboardAndMouse",
    "Win32_UI_WindowsAndMessaging",
    "Win32_System",
    "Win32_System_Threading",
    "Win32_System_WindowsProgramming",
    "Win32_Security",
] }
window-vibrancy = "0.5.2"
# windows-icons = { path = "../../windows-icons" }
windows-icons = { git = "https://github.com/iamzubin/windows-icons.git" }
base64 = "0.22.1"
active-win-pos-rs = "0.8"


[profile.release]
lto = true

[target.'cfg(not(any(target_os = "android", target_os = "ios")))'.dependencies]
tauri-plugin-global-shortcut = "2.0.0-rc"
tauri-plugin-single-instance = "2.0.0-rc"
# thinlto = true
