[package]
name = "holdem"
version = "0.2.3"
description = "A Tauri App"
authors = ["Zubin"]
edition = "2021"


[lib]
name = "holdem_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2.2.0", features = [] }

[dependencies]
tauri = { version = "2.5.1", features = ["tray-icon"] }
tauri-plugin-shell = "2.3.3"
tauri-plugin-updater = "2.7.1"
tauri-plugin-dialog = "2.2.1"
tauri-plugin-autostart = "2.3.0"
tauri-plugin-global-shortcut = "2.3.1"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tauri-plugin-fs = "2.2.1"
chrono = "0.4"
windows = { version = "0.61.3", features = [
    "Win32_Foundation",
    "Win32_UI_Input_KeyboardAndMouse",
    "Win32_UI_WindowsAndMessaging",
    "Win32_System",
    "Win32_System_Threading",
    "Win32_System_WindowsProgramming",
    "Win32_Security",
] }
window-vibrancy = "0.5.3"
# windows-icons = { path = "../../windows-icons" }
windows-icons = { git = "https://github.com/zmconnelly/windows-icons" }
base64 = "0.22.1"
active-win-pos-rs = "0.8"
tauri-plugin-process = "2.2.1"
drag = "2.1.0"
image = "0.25"
glob = "0.3.2"
posthog-rs = "0.3.5"
tokio = "1.47.0"
uuid = { version = "1.0", features = ["v4"] }

[profile.release]
lto = true

[target.'cfg(not(any(target_os = "android", target_os = "ios")))'.dependencies]
tauri-plugin-global-shortcut = "2.3.1"
tauri-plugin-single-instance = "2.2.3"
# thinlto = true
