[package]
name = "holdem"
version = "0.2.4"
description = "A Tauri App"
authors = ["Zubin"]
edition = "2021"


[lib]
name = "holdem_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2.2.0", features = [] }

[dependencies]
tauri = { version = "2.5.1", features = ["tray-icon"] }
tauri-plugin-shell = "2.3.3"
tauri-plugin-updater = "2.7.1"
tauri-plugin-dialog = "2.2.1"
tauri-plugin-autostart = "2.3.0"
tauri-plugin-global-shortcut = "2.3.1"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tauri-plugin-fs = "2.2.1"
chrono = "0.4"
base64 = "0.22.1"
tauri-plugin-process = "2.2.1"
drag = "2.1.0"
image = "0.25"
posthog-rs = "0.3.5"
tokio = "1.47.0"
uuid = { version = "1.0", features = ["v4"] }
thumb-rs = { git = "https://github.com/iamzubin/thumb-rs" }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "fmt"] }
tracing-appender = "0.2"
dirs = "5"

[target.'cfg(target_os = "macos")'.dependencies]
objc2 = "0.6"
objc2-foundation = "0.3"
objc2-app-kit = "0.3"
core-graphics-types = "0.1"
tauri-plugin-key-intercept = { git = "https://github.com/yigitkonur/tauri-plugin-key-intercept" }

[target.'cfg(target_os = "windows")'.dependencies]
windows = { version = "0.61.3", features = [
    "Win32_Foundation",
    "Win32_UI_Input_KeyboardAndMouse",
    "Win32_UI_WindowsAndMessaging",
    "Win32_System",
    "Win32_System_Threading",
    "Win32_System_WindowsProgramming",
    "Win32_Security",
] }
active-win-pos-rs = "0.8"

[profile.release]
lto = true
